# apertium-hyw

./: .gitignore  Makefile.am  README  apertium-hyw.hyw (1).lexd  apertium-hyw.hyw-punct.lexd  apertium-hyw.hyw-punct.twol  apertium-hyw.hyw.lexc  apertium-hyw.hyw.lexd  apertium-hyw.hyw.spellrelax  apertium-hyw.hyw.twol  apertium-hyw.pc.in  apertium-hyx.hyx.lexd  apertium-hyx.hyx.twol  apertium-hyx.pc.in  calc.txt  configure.ac  configure~  coverage-hfst (1).sh  coverage-hfst.sh  hitparade.txt  modes.xml  paradigm.py
corpus/: essayan.txt
lexd_components/: hyw-abbr_affix.lexd  hyw-added.lexd  hyw-added_arak29  hyw-added_bible.lexd  hyw-added_essayan.lexd  hyw-added_kantsasar.lexd  hyw-added_kayayan.lexd  hyw-added_kogian.lexd  hyw-added_wikipedia.lexd  hyw-adjective_adverb_list.lexd  hyw-adpositions.lexd  hyw-ambiguousPOS.lexd  hyw-infixal_punctuation.lexd  hyw-names.lexd  hyw-names_bible.lexd  hyw-names_hyebased.lexd  hyw-nouns_lex_irreg.lexd  hyw-nouns_lex_suffixbased.lexd  hyw-nouns_paradigms.lexd  hyw-nouns_regular_list.lexd  hyw-numbers-v2.lexd  hyw-numbers.lexd  hyw-other.lexd  hyw-pronouns.lexd  hyw-punctuation.lexd  hyw-verbs_irreg.lexd  hyw-verbs_kouyoumdjian.lexd  hyw-verbs_obs.lexd  hyw-verbs_paradigms.lexd  hyw-verbs_paradigms_with_lex.lexd  hyw-verbs_reg.lexd  hyx-abbr_affix.lexd  hyx-added_bible.lexd  hyx-added_essayan.lexd  hyx-adjective_adverb_list.lexd  hyx-adpositions.lexd  hyx-names.lexd  hyx-names_bible.lexd  hyx-names_hyebased.lexd  hyx-nouns_lex_irreg.lexd  (+13 more)
test/: hyw-input.txt  hyw-morph-expected.txt  tests.json
